# address-extractor

./: Dockerfile  LICENSE  Makefile  README.md  address_extract.py  build_libpostal.sh  docker-compose.yml  pyproject.toml
api/: main.py  models.py  nltk_address_chunker.py  pyap_address_parser.py
