[tool.poetry]
name = "address-extractor"
version = "0.1.0"
description = "A service that extracts addresses."
authors = ["Simon Liang <simon@x-tech.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
postal = "^1.1.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pyap = { git = "https://github.com/lhr0909/pyap.git", branch = "master" }
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
